fixed "По акции". Forgot to subtract percentage from 100%